--- a/notebooks/Wang Zhao bar.ipynb
+++ b/notebooks/Wang Zhao bar.ipynb
@@ -18,7 +18,7 @@
     "%matplotlib inline\n",
     "import scipy.optimize as so\n",
     "from scipy.integrate import quad\n",
-    "from scipy.special import kn\n",
+    "from scipy.special import erfc\n",
     "\n",
     "# Custom\n",
     "import gala.coordinates as gc\n",
@@ -60,7 +60,7 @@
     "    return ret\n",
     "\n",
     "def dwek1995_G2_helper(x, y, z, x0, y0, z0, Rmax, lib, f):\n",
-    "    r1 = (((x/x0)**2 + (y/y0)**2)**2 + (z/z0)**4)**0.25\n",
+    "    r1 = ( ((x/x0)**2 + (y/y0)**2)**2 + (z/z0)**4 ) ** 0.25\n",
     "    return lib.exp(-r1**2/2.) * f(x, y, Rmax)\n",
     "    \n",
     "def dwek1995_G2_density(x, y, z, x0, y0, z0, Rmax): \n",
@@ -68,20 +68,24 @@
     "\n",
     "def dwek1995_G2_density_arr(x, y, z, x0, y0, z0, Rmax): \n",
     "    return dwek1995_G2_helper(x, y, z, x0, y0, z0, Rmax, lib=np, f=f_arr)\n",
-    "    \n",
-    "\n",
-    "# ---\n",
-    "\n",
-    "def cao2013_density(x, y, z, x0, y0, z0):\n",
-    "    rr = (((x/x0)**2 + (y/y0)**2)**2 + (z/z0)**4)**0.25\n",
-    "    return kn(0, rr)\n",
     "\n",
     "density = dwek1995_G2_density\n",
     "density_arr = dwek1995_G2_density_arr\n",
-    "args = (1.49, 0.58, 0.4, 100.)\n",
-    "\n",
-    "# density = cao2013_density\n",
-    "# args = (0.67, 0.29, 0.27)"
+    "args = (1.49, 0.58, 0.4, 100.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def analytic_grad_on_axis(x, x0):\n",
+    "    # Only works along x, y, or z\n",
+    "    # G = rho0 = 1\n",
+    "    return (2*np.pi)**1.5 * x0 * erfc(x/x0/np.sqrt(2))"
    ]
   },
   {
@@ -391,7 +395,8 @@
    },
    "outputs": [],
    "source": [
-    "pot = p1"
+    "# pot = p1\n",
+    "pot = bscf.SCFPotential(m=1., r_s=1., Snlm=S, Tnlm=np.zeros_like(S))"
    ]
   },
   {
@@ -478,7 +483,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "fig,axes = plt.subplots(1, 2, figsize=(12,6))\n",
@@ -503,7 +510,33 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import h5py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "key = str(hash((6,6,0.)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with h5py.File('../barchaos/potential/data/coeffs.hdf5', 'a') as f:\n",
+    "    d = f.create_dataset(name=key, data=S[:6+1,:6+1,:6+1])\n",
+    "    d.attrs['Rmax'] = 100."
+   ]
   },
   {
    "cell_type": "code",
