--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -52,8 +52,8 @@ distribution in the inner Galaxy, accounting for $\approx$1/6 of the visible
 mass of the disk.
 Bars alter the orbit structure of a galaxy by creating resonances and chaotic
 orbits.
-Chaotic orbits cause kinematic substructures---e.g., stellar streams or open
-clusters---to mix more rapidly than around purely regular orbits.
+Chaotic orbits cause disrupted kinematic substructures---e.g., stellar streams
+or open clusters---to mix more rapidly than around purely regular orbits.
 The Galactic bar will therefore have a significant impact on the amount of
 kinematic substructure in the central Galaxy and inner stellar halo.
 % Aims
@@ -139,8 +139,8 @@ We find that with this expansion, the force errors in the volume $0.1~\kpc < r <
 30~\kpc$ are typically $<1\%$, where $r$ is the Galactocentric radius.
 \todo{double check this}
 
-In the experiments below, we consider a grid of pattern speeds $\Omega_{\rm b} =
-\left[ 30, 40, 50, 60 \right]~\kmskpc$.
+In the experiments below, we consider a grid of pattern speeds between $30 \leq
+\Omega_{\rm b} \leq 60~\kmskpc$.
 We compute a different set of expansion coefficients for each bar pattern speed:
 the pattern speed sets the corotation and therefore truncation radius
 (\eqname~\ref{eq:truncfunc}) of the bar model.
